homepage-overlap-issuse-fixed
homepage-overlap-issuse-fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2477,6 +2477,30 @@ input[type=number]::-webkit-outer-spin-button {
   .text-tabs{
   font-size: 13px; 
 }
+
+}
+@media (max-width: 767px) {
+    /* .ritekhana-banner-caption-view1 .nav .nav-item{
+        line-height: 21px !important;
+    }
+    .ritekhana-banner-caption-view1 .nav-link {
+        display: block;
+        padding: 0.2rem 0.3rem !important;
+        font-size: 12px !important;
+    } */
+    .css-z3c6am-MuiFormControl-root-MuiTextField-root{
+        width: 100%;
+    }
+    .ritekhana-services-view1-full, .home-page{
+        margin-top: 0px !important;
+    }
+    .ritekhana-banner-caption-view1{
+        margin-top: 0px !important;
+        top:30% !important;
+    }
+    .ritekhana-banner-one-layer > img{
+        height: 80vh !important;
+    }
 }
 @media (max-height: 500px) {
   #hero {
